# Inventory-Management-System

./: .gitignore  README.md
cpp-implementation/: CMakeLists.txt
cpp-implementation/include/: Books.h  Clothing.h  Electronics.h  Guitars.h  Others.ih  PC_Games.h  Packaging.h  Product.h  Product.ih  ProductFP.h  Server.h  Shipments.h  Shipments.ih  ShipmentsDP.h  State.h  Stationary.h  Stock.h  Transport.h  Transport.ih  TransportFP.h  TransportTypes.h
cpp-implementation/proto/: Protobufs.proto
cpp-implementation/src/core/: CLI.cpp  DisplayState.cpp  Server.cpp  State.cpp
cpp-implementation/src/others/: Packaging.cpp  Stock.cpp
cpp-implementation/src/products/Books/: Fiction.cpp  NonFiction.cpp
cpp-implementation/src/products/Clothing/: Dresses.cpp  Tshirts.cpp
cpp-implementation/src/products/Stationary/: Notepads.cpp  Pens.cpp
cpp-implementation/src/products/electronics/: Laptops.cpp  Phones.cpp
cpp-implementation/src/products/guitars/: Acoustic.cpp  Electric.cpp
cpp-implementation/src/products/pcgames/: Action.cpp  Strategy.cpp
cpp-implementation/src/shipment/: Shipments.cpp
cpp-implementation/src/transport/: Air.cpp  Land.cpp  Ocean.cpp
java-implementation/: pom.xml
java-implementation/src/main/java/com/inventory/core/: CLI.java  GrpcClientDemo.java  GrpcServer.java  InventoryManagementSystem.java  ProtobufTest.java
java-implementation/src/main/java/com/inventory/others/: Packaging.java  Stock.java
java-implementation/src/main/java/com/inventory/products/: Product.java
java-implementation/src/main/java/com/inventory/products/books/: Books.java  Fiction.java  NonFiction.java
java-implementation/src/main/java/com/inventory/products/clothing/: Clothing.java  Dresses.java  Tshirts.java
java-implementation/src/main/java/com/inventory/products/electronics/: Electronics.java  Laptops.java
java-implementation/src/main/java/com/inventory/products/guitars/: Acoustic.java  Electric.java  Guitars.java
java-implementation/src/main/java/com/inventory/products/pcgames/: Action.java  PC_Games.java  Strategy.java
java-implementation/src/main/java/com/inventory/products/stationary/: Notepads.java  Pens.java  Stationary.java
java-implementation/src/main/java/com/inventory/shipment/: ShipmentDetails.java  Shipments.java
java-implementation/src/main/java/com/inventory/transport/: Air.java  Land.java  Ocean.java  Transport.java  TransportTypes.java
java-implementation/src/main/proto/: Protobufs.proto  Service.proto
